--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
 
       <!-- nút chơi lại -->
       <div id="play-again" class="text-center d-none">
-        <a
-          href="https://www.facebook.com/phat.canlez/"
-          class="btn btn-primary btn-play-again"
-          >Play Again</a
-        >
+        <button>Play Again</button>
       </div>
     </div>
 
