--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 
       <!-- nút chơi lại -->
       <div id="play-again" class="text-center d-none">
-        <button>Play Again</button>
+        <button class = "btn btn-play-again"
+
+>Play Again</button>
       </div>
     </div>
 
